fix some crash api

--- a/flutter_demo/android/app/build.gradle
+++ b/flutter_demo/android/app/build.gradle
@@ -71,4 +71,7 @@ dependencies {
     compileOnly 'im.zego:express-private:3.3.0.27508'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation fileTree(dir: 'libs', include: ['*.jar', '*.aar'])
+
+    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'com.google.android.material:material:1.4.0'
 }
