--- a/zego_superwhiteboard/pubspec.yaml
+++ b/zego_superwhiteboard/pubspec.yaml
@@ -10,6 +10,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_web_plugins:
+    sdk: flutter
   plugin_platform_interface: ^2.0.2
 
 dev_dependencies:
@@ -39,6 +41,9 @@ flutter:
         pluginClass: ZegoSuperwhiteboardPlugin
       ios:
         pluginClass: ZegoSuperwhiteboardPlugin
+      web:
+        pluginClass: ZegoSuperwhiteboardWeb
+        fileName: zego_superwhiteboard_web.dart
 
   # To add assets to your plugin package, add an assets section, like this:
   # assets:
