--- a/zego_superboard/pubspec.yaml
+++ b/zego_superboard/pubspec.yaml
@@ -4,7 +4,7 @@ version: 0.0.1
 homepage:
 
 environment:
-  sdk: '>=2.18.6 <3.0.0'
+  sdk: '>=2.16.0 <3.0.0'
   flutter: ">=2.5.0"
 
 dependencies:
@@ -13,11 +13,15 @@ dependencies:
   flutter_web_plugins:
     sdk: flutter
   plugin_platform_interface: ^2.0.2
+#  zego_express_engine: # ^3.2.1
+#    git:
+#      url: git@github.com:zegoim/zego-express-flutter-sdk.git
+#      ref: customer/whiteboard
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
+  flutter_lints: ^1.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -46,8 +50,8 @@ flutter:
         fileName: zego_superboard_web.dart
 
   # To add assets to your plugin package, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+#  assets:
+#    - assets/ZegoSuperboardWebFlutterWrapper.js
   #   - images/a_dot_ham.jpeg
   #
   # For details regarding assets in packages, see
