--- a/zego_superboard/pubspec.yaml
+++ b/zego_superboard/pubspec.yaml
@@ -46,9 +46,9 @@ flutter:
         fileName: zego_superboard_web.dart
 
   # To add assets to your plugin package, add an assets section, like this:
-#  assets:
-#    - assets/ZegoSuperboardWebFlutterWrapper.js
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/ZegoSuperboardWebFlutterWrapper.js
+#     - images/a_dot_ham.jpeg
   #
   # For details regarding assets in packages, see
   # https://flutter.dev/assets-and-images/#from-packages
